# ProtLLM

./: LICENSE  README.md  train.sh
ProteinGPT-main/ProteinGPT-main/: README.md  environment.yml  pyproject.toml  requirements.txt
ProteinGPT-main/ProteinGPT-main/src/: demo_esm.py  protein_gpt.py
ProteinGPT-main/ProteinGPT-main/src/configs/: train_modality_alignment.yaml
ProteinGPT-main/ProteinGPT-main/src/data/: DATASET.md
ProteinGPT-main/ProteinGPT-main/src/minigpt4/configs/datasets/pdb/: pdb.yaml
ProteinGPT-main/ProteinGPT-main/src/minigpt4/conversation/: conversation_esm.py
ProteinGPT-main/ProteinGPT-main/src/minigpt4/datasets/: pdb.py
ProteinGPT-main/ProteinGPT-main/src/minigpt4/datasets/datasets/: pdb_dataset.py
ProteinGPT-main/ProteinGPT-main/src/minigpt4/models/: mini_gpt4.py
src/: demo.sh
src/configs/: evaluation.yaml  minigpt4.yaml  train_instruction_tuning.yaml
src/minigpt4/configs/datasets/cc_sbu/: align.yaml
src/minigpt4/datasets/: pdb_dataset.py  qa_dataset.py
src/minigpt4/runners/: runner_base.py
src/prompts/: alignment.txt
